# swissisoform

./: .env.example  .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
5_prime_UTR_analysis/: README.md  README_truncated_isoform_analysis.md  run_analysis.py
data/: DATA.md
notebooks/: bed_cleanup.ipynb  gene_list.ipynb  generate_proteins_test.ipynb  naxe_features.csv  test_line.gtf  visualize_isoforms.ipynb  visualize_isoforms_GARS1.ipynb  visualize_isoforms_GSR.ipynb  visualize_isoforms_NAXE.ipynb  visualize_isoforms_NTHL1.ipynb  visualize_isoforms_PNPO.ipynb  visualize_isoforms_test.ipynb
scripts/: 0_download_genome.sh  1_cleanup_files.sh  2_analyze_mutations.sh  2_analyze_mutations_reduced.sh  3_generate_proteins.sh  3_generate_proteins_reduced.sh  4_predict_localization.sh  5_summarize_results.sh  analyze_differential_mutations.py  analyze_mutations.py  analyze_truncations.py  analyze_truncations.sh  analyze_truncations_full.sh  analyze_truncations_reduced.sh  annotate_mane.py  cleanup_files.py  deeploc_predictions.sh  filter_gnomad_af.py  filter_mane_select.py  generate_protein_sequences.py  generate_protein_sequences.sh  generate_protein_sequences_full.sh  generate_protein_sequences_mutations.py  generate_protein_sequences_mutations_reduced.sh  generate_protein_sequences_reduced.sh  generate_proteins.py  get_dataset_config.py  merge_chunks.py  monitor_job.sh  proteins.py  summarize_results.py  translate.py  translate.sh  truncations.py  truncations.sh  truncations_specific.sh  utils.sh
tests/: README.md  README_DEBUG_LOGGING.md  TESTS.md  (+5 more)
(+17 files in other folders)
